# Quill

./: README.md  pyproject.toml
quill/: __init__.py  ai.py  app.py  config.py  flowbar.py  focus.py  history.py  keys.py  stats.py  window.py
scripts/: build_app.sh  make_icon.py
