[project]
name = "quill"
version = "0.2.0"
description = "Quill — local voice dictation for macOS. Hold a key, speak, polished text appears."
requires-python = ">=3.11"
dependencies = [
    "rumps>=0.4.0",
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "mlx-whisper>=0.4.1",
    "anthropic>=0.40.0",
]

[project.scripts]
quill = "quill.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quill"]
